# NumCompute

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: run_benchmarks.py
demo/: demo.py  demo_optim.py  quickstart (1).ipynb  quickstart.ipynb  quickstart1.ipynb
numcompute/: __init__.py  benchmarking.py  io.py  metrics.py  optim.py  pipeline.py  preprocessing.py  rank.py  sort_search.py  stats.py  utils.py
tests/: __init__.py  test_benchmarking.py  test_init.py  test_io.py  test_metrics.py  test_optim.py  test_pipeline.py  test_preprocessing.py  test_rank.py  test_sort_rank.py  test_sort_search.py  test_stats.py  test_utils.py
