[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute"
version = "0.1.0"
description = "A lightweight NumPy-based scientific computing toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "NumCompute Team" }
]
keywords = ["numpy", "scientific-computing", "machine-learning", "coursework"]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.setuptools.packages.find]
include = ["numcompute*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
